reworked the markdown initializer code, tweak the prompt